// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 8px;
}

<input
  class="c0 c1"
  name="name"
  placeholder="Nome"
  type="text"
  value="Mario"
/>
`;

exports[`<TextField /> when field is invalid displays the respective error message 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 8px;
  border-color: #dc3545;
}

.c1 + span {
  color: #dc3545;
  font-size: 11px;
}

<input
  class="c0 c1"
  name="email"
  placeholder="Email"
  type="text"
  value="teste_teste.com"
/>
`;

exports[`<TextField /> when field is valid and user is typing the value must be updated 1`] = `
.c1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c3 {
  font-size: 12px;
  font-weight: 400;
  line-height: 1;
  color: #dc3545;
}

.c0 {
  margin-bottom: 17px;
}

.c2 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 8px;
  border-color: #dc3545;
}

.c2 + span {
  color: #dc3545;
  font-size: 11px;
}

<div>
  <div
    class="c0"
  >
    <input
      class="c1 c2"
      name="email"
      placeholder="Email"
      type="text"
      value="teste_teste.com"
    />
    <span
      class="c3"
      color="error.main"
      id="textField_error_label_email"
      role="alert"
    >
      You must provide a valid email
    </span>
  </div>
</div>
`;
